# whatsmynetworth

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml
api/whatsmynetworth/: app.py  main.py
app/: dependencies.py  main.py
app/alembic/: env.py
app/alembic/versions/: 0947db5c9447_create_account_table.py  bd54f3e3021d_create_customer_table.py  c9817ba51f77_create_connection_table.py  f537cb168a45_create_transaction_table.py
app/api/: accounts.py  connections.py  customers.py  providers.py  transactions.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  account.py  connection.py  customer.py  transaction.py
app/repositories/: account_repository.py  connection_repository.py  customer_repository.py  transaction_repository.py
app/routers/: connections.py  customers.py  providers.py
app/schemas/: __init__.py  account.py  callback.py  connection.py  customer.py  transaction.py
app/tests/: README.md  conftest.py  test_connection.py  test_date_utils.py  test_main.py  test_saltedge.py
app/tests/saltedge/: test_accounts.py  test_connection.py  test_customers.py  test_providers.py  test_transactions.py
app/tests/test_repositories/: test_account_repository.py  test_transaction_repository.py
app/tests/test_transactions/: test_get_transactions.py
app/utils/: database.py  saltedge.py
app/utils/saltedge/: client.py  constants.py  date_utils.py  exceptions.py  models.py
ml/features/: transactions.ipynb
src/whatsmynetworth/: main.py
web/: .env.test  next-auth.d.ts  package-lock.json  package.json  tailwind.config.ts
web/prisma/: schema.prisma
web/prisma/migrations/20240814201236_asfasf/: migration.sql
web/src/app/: auth.ts  globals.css  middleware.ts  page.tsx
web/src/app/components/: BarChart.tsx  MenuItem.tsx  Overlay.tsx
web/src/app/components/charts/: BarChart.tsx  DoughnutChart.tsx  (+6 more)
web/src/app/connect/: page.tsx
web/src/app/connections/: page.tsx
web/src/app/dashboard/: AccountsDashboard.tsx  Avatar.tsx  Dashboard.tsx  Dashboards.tsx  DefaultDashboard.tsx  MenuItem.tsx  TransactionsDashboard.tsx  getCategoryDistribution.ts  page.tsx
web/src/app/login/: GoogleIcon.tsx  SignIn.tsx  SignInPage.tsx
web/src/app/services/: getAccounts.ts  getConnections.ts  getTransactions.ts
web/src/app/settings/: page.tsx
web/src/features/navigation/: Logo.tsx  Navigation.tsx  navigationSlice.ts
web/src/features/portfolioQuickMenu/: Portfolio.tsx
web/src/lib/: store.ts
(+28 files in other folders)
