[project]
name = "whatsmynetworth"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Daniel Steman", email = "daniel.steman@bridgefund.nl" }
]
dependencies = [
    "fastapi>=0.111.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "python-dotenv>=1.0.1",
]

[tool.rye.scripts]
dev-api = "fastapi dev api/whatsmynetworth/app.py"
dev-web = "yarn --cwd web dev"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["api/whatsmynetworth"]
