[project]
name = "whatsmynetworth"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Daniel Steman", email = "daniel.steman@bridgefund.nl" }
]
dependencies = [
    "fastapi>=0.111.1",
    "pytest>=8.2.2",
    "pydantic>=2.8.2",
    "pytest-mock>=3.14.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "python-dotenv>=1.0.1",
]

[tool.rye.scripts]
api = "fastapi dev"
web = "yarn --cwd web dev"
test = "pytest -s -vv"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["api/whatsmynetworth"]
