[project]
name = "whatsmynetworth"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Daniel Steman", email = "daniel.steman@bridgefund.nl" }
]
dependencies = [
    "fastapi>=0.111.1",
    "pytest>=8.2.2",
    "pydantic>=2.8.2",
    "pytest-mock>=3.14.0",
    "sqlalchemy>=2.0.32",
    "alembic>=1.13.2",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.4.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
api = "fastapi dev"
web = "yarn --cwd web dev"
test = "pytest -s -vv"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = "."

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E203", "E501"]
